# ai-streamer-twitch

./: README.md  pyproject.toml
configs/: .gitignore  example.toml
examples/: client.py
src/ai_streamer_twitch/: __init__.py  __main__.py  api.py  client.py  config.py  constants.py  models.py  service.py  utils.py
