[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ai_streamer_twitch"
version = "0.0.1"
authors = [
  { name="Zeger Use", email="zegeruse@gmail.com" },
]
description = "ai_streamer_twitch"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "websockets"
]

[project.urls]
Homepage = "https://github.com/ZegerUser/ai_streamer_twitch"
Issues = "https://github.com/ZegerUser/ai_streamer_twitch/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]